# learn

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.c  main.h
cmake/: demo.cmake
headers/: chapter_10.h
lib/: CMakeLists.txt  same.c  same.h  samelib.c  samelib.h  sharedlib.c  sharedlib.h  staticlib.c  staticlib.h
sources/: chapter_10.c
src/chapter_10/: chapter_10.c
test/: test_add.c
